@@ -4,3 +4,4 @@ Daniel Robbins <drobbins@gentoo.org>
 
 Contributors:
 Rob Holland <tigger@gentoo.org>
+Chris Gianelloni <wolf31o2@gentoo.org>
