@@ -1,0 +1,2 @@
+GAME_EXECUTABLE &
+exec fluxbox
