@@ -1,0 +1,13 @@
+
+To start an ssh server on this system, type "/etc/init.d/sshd start".  If you
+need to log in remotely as root, type "passwd root" to reset root's password 
+to a known value.
+
+View installation instructions by typing "links /mnt/cdrom/docs/handbook/html/index.html" 
+or "links http://www.gentoo.org/doc/en/handbook/handbook.xml"
+for the latest version from the gentoo.org web site.
+
+Please report any bugs you find to http://bugs.gentoo.org. Be sure to include
+detailed information about how to reproduce the bug you are reporting.
+Thank you for using Gentoo Linux!
+
